--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <button onclick="Regular()">Regular</button>
 <button onclick="Irregular()">Irregular</button>
 <button onclick="Stop()">Stop</button>
+<button onclick="Test()">Test Sound</button>
