--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script>loop()</script>
 </header>
 <p>Mode</p>
-<p id="mode">wasd</p>
+<p id="mode">stop</p>
 <button onclick="Regular()">Regular</button>
 <button onclick="Irregular()">Irregular</button>
 <button onclick="Stop()">Stop</button>
